output.txt
Sun Jan 24 21:36:43 PST 2021
*** compiling with clang++ to create an executable called myprogram
clang version 7.0.1 (tags/RELEASE_701/final)
Target: x86_64-unknown-linux-gnu
Thread model: posix
InstalledDir: /opt/rh/llvm-toolset-7.0/root/usr/bin
LLVM (http://llvm.org/):
  LLVM version 7.0.1
  Optimized build.
  Default target: x86_64-unknown-linux-gnu
  Host CPU: broadwell
11349 warnings generated.
26480 warnings generated.
/home/NETID/mnborath/ass2/timespan.cpp:6:1: error: #includes are not sorted properly [llvm-include-order,-warnings-as-errors]
#include <iostream>
^        ~~~~~~~~~~
         <cmath>
/home/NETID/mnborath/ass2/timespan.cpp:30:5: error: do not use 'else' after 'return' [readability-else-after-return,-warnings-as-errors]
    else 
    ^~~~~
/home/NETID/mnborath/ass2/timespan.cpp:56:9: error: consider replacing 'long' with 'int64' [google-runtime-int,-warnings-as-errors]
        long result = round((hour * 3600) + (minute * 60) + second);
        ^
/home/NETID/mnborath/ass2/timespan.cpp:56:23: error: narrowing conversion from 'double' to 'long' [cppcoreguidelines-narrowing-conversions,-warnings-as-errors]
        long result = round((hour * 3600) + (minute * 60) + second);
                      ^
/home/NETID/mnborath/ass2/timespan.cpp:79:9: error: consider replacing 'long' with 'int64' [google-runtime-int,-warnings-as-errors]
        long result = round((minute * 60) + second);
        ^
/home/NETID/mnborath/ass2/timespan.cpp:79:23: error: narrowing conversion from 'double' to 'long' [bugprone-narrowing-conversions,-warnings-as-errors]
        long result = round((minute * 60) + second);
                      ^
/home/NETID/mnborath/ass2/timespan.cpp:102:9: error: consider replacing 'long' with 'int64' [google-runtime-int,-warnings-as-errors]
        long result = round(second);
        ^
/home/NETID/mnborath/ass2/timespan.cpp:102:23: error: narrowing conversion from 'double' to 'long' [bugprone-narrowing-conversions,-warnings-as-errors]
        long result = round(second);
                      ^
/home/NETID/mnborath/ass2/timespan.cpp:132:5: error: do not use 'else' after 'return' [readability-else-after-return,-warnings-as-errors]
    else
    ^~~~
/home/NETID/mnborath/ass2/timespan.cpp:147:16: error: redundant boolean literal in conditional return statement [readability-simplify-boolean-expr,-warnings-as-errors]
        return true;
~~~~~~~~~~~~~~~^~~~~
/home/NETID/mnborath/ass2/timespan.cpp:149:5: error: do not use 'else' after 'return' [readability-else-after-return,-warnings-as-errors]
    else 
    ^
note: this fix will not be applied because it overlaps with another fix
/home/NETID/mnborath/ass2/timespan.cpp:208:16: error: redundant boolean literal in conditional return statement [readability-simplify-boolean-expr,-warnings-as-errors]
        return true;
~~~~~~~~~~~~~~~^~~~~
/home/NETID/mnborath/ass2/timespan.cpp:210:5: error: do not use 'else' after 'return' [readability-else-after-return,-warnings-as-errors]
    else
    ^
note: this fix will not be applied because it overlaps with another fix
/home/NETID/mnborath/ass2/timespan.cpp:222:16: error: redundant boolean literal in conditional return statement [readability-simplify-boolean-expr,-warnings-as-errors]
        return false;
~~~~~~~~~~~~~~~^~~~~~
/home/NETID/mnborath/ass2/timespan.cpp:224:5: error: do not use 'else' after 'return' [readability-else-after-return,-warnings-as-errors]
    else
    ^
note: this fix will not be applied because it overlaps with another fix
Suppressed 26462 warnings (26462 in non-user code).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
15 warnings treated as errors
*** running myprogram
test1 complete
test2 complete
test3 complete
test4 complete
Done.
*** cleaning up, deleting myprogram
Sun Jan 24 21:36:51 PST 2021
